--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    flutter_hooks:^0.16.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
